# rk_cad

./: Cargo.toml  LICENSE-APACHE  Makefile  README.md
.github/workflows/: test_and_check.yaml
rk_cad/: Cargo.toml
rk_cad/src/: lib.rs
rk_cad/src/geo/: curve.rs  error.rs  mod.rs  surface.rs
rk_calc/: Cargo.toml
rk_calc/src/: error.rs  lib.rs  point3.rs  vector3.rs
rk_step_parser/: Cargo.toml
rk_step_parser/src/: attr.rs  builder.rs  entiry_attr.rs  entity_attr.rs  error.rs  exporter.rs  import_step.rs  importer.rs  lib.rs  main.rs  parse_step.rs  raw_entity.rs  step_entiry.rs  step_entity.rs  step_file.rs  step_item_map.rs  write_step.rs  writer.rs
rk_step_parser/src/old/: importer.rs  mod.rs  raw_entity.rs  step_file.rs
rk_step_parser/src/step_item/: common.rs  direction.rs  mod.rs
rk_step_parser/src/step_item/geometry/: axis2_placement_3d.rs  cartesian_point.rs  direction.rs  line.rs  mod.rs  plane.rs  vector.rs
rk_step_parser/src/step_item/topology/: edge_curve.rs  mod.rs  oriented_edge.rs  vertex_point.rs
rk_step_parser/src/typed/: common.rs  edge_curve.rs  line.rs  mod.rs  plane.rs  vertex.rs
rk_step_parser/src/typed/geo/: axis2_placement_3d.rs  cartesian_point.rs  direction.rs  line.rs  mod.rs  plane.rs  vector.rs
rk_step_parser/src/typed/topo/: advanced_face.rs  closed_shell.rs  edge_curve.rs  edge_loop.rs  face_bound.rs  manifold_solid_brep.rs  mod.rs  oriented_edge.rs  vertex.rs
rk_step_parser/tests/: builder.rs  cube.rs  exporter.rs  import_step.rs  importer.rs  step_file.rs
rk_step_parser/tests/data/: cube.step
(+9 files in other folders)
